...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="letterToRuneQuizIntent"
                    android:text="@string/letterToRuneQuiz" />

                <Button
                    android:id="@+id/buttonRuneToLetterQuiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="runeToLetterQuizIntent"
                    android:text="@string/runeToLetterQuiz" />

...
